Keep custom source-set test Java 17 compatible